fix overflow of metrics of Relative growth advantage

--- a/src/index.css
+++ b/src/index.css
@@ -82,18 +82,3 @@ code {
 .custom-date-filter-input:hover {
   cursor: pointer;
 }
-
-h1::first-line {
-  color: blue;
-}
-h1 {
-  color: red;
-}
-
-.metrics-box::first-line {
-  font-style: italic;
-}
-
-.test-container::first-line {
-  font-style: italic;
-}
